add pictures add style add function font changes

--- a/index.html
+++ b/index.html
@@ -3,14 +3,91 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
+    <link href='https://fonts.googleapis.com/css?family=Quicksand:400,700,300' rel='stylesheet' type='text/css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
     <title>Amimal Map</title>
   </head>
   <body>
     <header class="masthead">
+      <h1>Endangered Species</h1>
+      <div class="info-container">
+        <div class="details">
+          <div class="asia animalBox">
+            <img src="img/asia.jpg" alt="" />
+            <h3>Asia</h3>
+              <p>Common Name: Giant Panda</p>
+              <p>Scientific Name: Ailuropoda melanoleuca</p>
+              <p>Population: 1000 to 2000 remain in the wild</p>
+          </div>
+          <div class="australia animalBox">
+            <img src="img/australia.jpg" alt="" />
+            <h3>Australia</h3>
+              <p>Common Name: Northern Hairy-nosed Wombat</p>
+              <p>Scientific Name: Lasiorhinus krefftii</p>
+              <p>Population: Only about 65 individuals remain</p>
+          </div>
+          <div class="siberia animalBox">
+            <img src="img/saiga.jpg" alt="" />
+            <h3>Siberia</h3>
+              <p>Common Name: Saiga Antelope</p>
+              <p>Scientific Name: Saiga tatarica</p>
+              <p>Population: Less than 1500</p>
+          </div>
+          <div class="europe animalBox">
+            <img src="img/seal.jpg" alt="" />
+            <h3>Europe</h3>
+              <p>Common Name: Mediterranean Monk Seal</p>
+              <p>Scientific Name: Monachus monachus</p>
+              <p>Population: Less than 600</p>
+          </div>
+          <div class="middleeast animalBox">
+            <img src="img/sandcat.jpg" alt="" />
+            <h3>Middle East</h3>
+              <p>Common Name: Sand Cat</p>
+              <p>Scientific Name: Felis margarita</p>
+              <p>Population: Less than 200</p>
+          </div>
+          <div class="africa animalBox">
+            <img src="img/rhino.jpg" alt="" />
+            <h3>Africa</h3>
+              <p>Common Name: Black Rhinoceros</p>
+              <p>Scientific Name: Diceros bicornis</p>
+              <p>Population: Extinct</p>
+          </div>
+          <div class="samerica animalBox">
+            <img src="img/samerica.jpg" alt="" />
+            <h3>South America</h3>
+              <p>Common Name: Little Spotted Cat</p>
+              <p>Scientific Name: Leopardus tigrinus</p>
+              <p>Population: Less than 100</p>
+          </div>
+          <div class="camerica animalBox">
+            <img src="img/spidermonkey.jpg" alt="" />
+            <h3>Central America</h3>
+              <p>Common Name: Spider Monkey</p>
+              <p>Scientific Name: Ateles geoffroyi</p>
+              <p>Population: Less than 100</p>
+          </div>
+          <div class="namerica animalBox">
+            <img src="img/namerica.jpg" alt="" />
+            <h3>North America</h3>
+              <p>Common Name: American Bison</p>
+              <p>Scientific Name: Bison bison</p>
+              <p>Population: Approximately 9000</p>
+          </div>
+          <div class="antarctica animalBox">
+            <img src="img/whale.jpg" alt="" />
+            <h3>Antarctica</h3>
+              <p>Common Name: Humpback Whale</p>
+              <p>Scientific Name: Megaptera novaeangliae</p>
+              <p>Population: Approximately 6000</p>
+          </div>
+        </div>
+      </div>
     </header>
 
     <div class="map-container">
-
       <img class="panda effect" src="img/asia.jpg" alt="" />
       <img class="littlecat effect" src="img/samerica.jpg" alt="" />
       <img class="wombat effect" src="img/australia.jpg" alt="" />
@@ -18,6 +95,9 @@
       <img class="rhino effect" src="img/rhino.jpg" alt="" />
       <img class="bison effect" src="img/namerica.jpg" alt="" />
       <img class="whale effect" src="img/whale.jpg" alt="" />
+      <img class="saiga effect" src="img/saiga.jpg" alt="" />
+      <img class="seal effect" src="img/seal.jpg" alt="" />
+      <img class="spidermonkey effect" src="img/spidermonkey.jpg" alt="" />
 
     </div>
 
